workloads/ingress/dev/patch-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    # TODO: ACM Certificate ARN을 ExternalSecret으로 주입
    # SSM Parameter: /sesacthon/dev/ingress/acm-certificate-arn
    # alb.ingress.kubernetes.io/certificate-arn: <SSM에서 가져올 예정>
    external-dns.alpha.kubernetes.io/managed-by: external-dns
spec:
  rules:
    - host: argocd.dev.growbin.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
